wrap fix

--- a/marseille1.css
+++ b/marseille1.css
@@ -32,7 +32,6 @@ main{
     display:flex;
     flex-direction: row;
     justify-content: space-around;
-    flex-wrap: wrap;
 }
 .news-box{
     width: 17em;
